fixed click-stealing visibility issues

--- a/presentations/common/css/appc.css
+++ b/presentations/common/css/appc.css
@@ -241,6 +241,10 @@ h2 {
     opacity: 0.3;
 }
 
+.step + .canvas-overview {
+    visibility: hidden;
+}
+
 /* IMPRESS NOT SUPPORTED STYLES */
 
 .fallback-message {
@@ -248,6 +252,7 @@ h2 {
     line-height: 1.3;
     
     display: none;
+    visibility: hidden;
     width: 780px;
     padding: 10px 10px 0;
     margin: 20px auto;
@@ -269,6 +274,7 @@ h2 {
 
 .impress-not-supported .fallback-message {
     display: block;
+    visibility: visible;
 }
 
 /* hint on the first slide */
@@ -288,6 +294,7 @@ h2 {
     
     z-index: 100;
     
+    visibility: hidden;
     opacity: 0;
     
     -webkit-transform: translateY(400px);
@@ -304,6 +311,7 @@ h2 {
 }
 
 .step-title + .hint {
+    visibility: visible;
     opacity: 1;
     
     -webkit-transition: opacity 1s 1s, -webkit-transform 0.5s;
